--- a/mte.css
+++ b/mte.css
@@ -1,5 +1,5 @@
 /* CSS for MULTEXT-East specifications */
-@import url("http://www.tei-c.org/release/xml/tei/stylesheet/tei.css");
+@import url("https://www.tei-c.org/release/xml/tei/stylesheet/tei.css");
 table {
     border-collapse: collapse;
 }
